<resources>

    <string name="app_name">Plume For DashClock</string>
    <string name="title_settings">Plume DashClock Settings</string>
    <string name="extension_title">Plume status</string>
    <string name="extension_description">Display unread counters and last notification from Plume</string>
    <string name="expanded_title_tweet">Tweets %1$d</string>
    <string name="expanded_title_mention">Mentions %1$d</string>
    <string name="expanded_title_dm">DMs %1$d</string>
    <string name="pref_hide_empty">Hide When Empty</string>
    <string name="pref_hide_empty_summary">Hide the DashClock widget when all counters are empty</string>
    <string name="pref_hide_empty_counters">Hide Empty Counters</string>
    <string name="pref_hide_empty_counters_summary">Hide a counter if it is empty</string>
    <string name="pref_counters">Counters</string>
    <string name="pref_counter_tweets">Show Tweets</string>
    <string name="pref_counter_tweets_summary">Show unread counter for Tweets</string>
    <string name="pref_counter_mentions">Show Mentions</string>
    <string name="pref_counter_mentions_summary">Show unread counter for Mentions</string>
    <string name="pref_counter_dms">Show DMs</string>
    <string name="pref_counter_dms_summary">Show unread counter for DMs</string>
    <string name="warn_plume_missing">\"Plume for Twitter\" is not installed
\nWould you like to download it now ?</string>
    
</resources>