<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:defaultValue="true"
        android:key="HideWhenEmpty"
        android:summary="@string/pref_hide_empty_summary"
        android:title="@string/pref_hide_empty" />

    <PreferenceCategory android:title="@string/pref_counters" >
        <SwitchPreference
            android:defaultValue="true"
            android:key="ShowCounterTweet"
            android:title="@string/pref_counter_tweets" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="ShowCounterMentions"
            android:title="@string/pref_counter_mentions" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="ShowCounterDMs"
            android:title="@string/pref_counter_dms" />
    </PreferenceCategory>

</PreferenceScreen>